added swagger docs for inventory routes and updated delete route for inventory
